--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="d-flex" style="height: 100vh;">
   <!-- Sidebar -->
   <div class="p-4 shadow-sm" style="width: 260px; background-color: #f8f9fa; border-right: 1px solid #dee2e6;">
-    <h4 class="text-dark fw-bold mb-4">HEDGE</h4>
+    <h4 class="text-dark fw-bold mb-4">DomusOk</h4>
     <ul class="nav flex-column">
       <li class="nav-item mb-2">
         <a class="nav-link px-2 py-1 rounded text-dark"
@@ -13,9 +13,44 @@
       </li>
       <li class="nav-item mb-2">
         <a class="nav-link px-2 py-1 rounded text-dark"
-           [routerLink]="['/archived']"
+           [routerLink]="['/scorte']"
            routerLinkActive="fw-bold text-primary bg-white shadow-sm">
-          Archiviati
+          Scorte
+        </a>
+      </li>
+      <li class="nav-item mb-2">
+        <a class="nav-link px-2 py-1 rounded text-dark"
+           [routerLink]="['/listaSpesa']"
+           routerLinkActive="fw-bold text-primary bg-white shadow-sm">
+          Lista spesa
+        </a>
+      </li>
+      <li class="nav-item mb-2">
+        <a class="nav-link px-2 py-1 rounded text-dark"
+           [routerLink]="['/scontrino']"
+           routerLinkActive="fw-bold text-primary bg-white shadow-sm">
+           Aggiungi scontrino
+        </a>
+      </li>
+      <li class="nav-item mb-2">
+        <a class="nav-link px-2 py-1 rounded text-dark"
+           [routerLink]="['/spese']"
+           routerLinkActive="fw-bold text-primary bg-white shadow-sm">
+           Spese mensili
+        </a>
+      </li>
+      <li class="nav-item mb-2">
+        <a class="nav-link px-2 py-1 rounded text-dark"
+           [routerLink]="['/ricette']"
+           routerLinkActive="fw-bold text-primary bg-white shadow-sm">
+           Ricette
+        </a>
+      </li>
+      <li class="nav-item mb-2">
+        <a class="nav-link px-2 py-1 rounded text-dark"
+           [routerLink]="['/schema']"
+           routerLinkActive="fw-bold text-primary bg-white shadow-sm">
+           Schema nutrizionale
         </a>
       </li>
     </ul>
